# wave-counter

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  DESIGN.json  DESIGN.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json  pytest.ini  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/playground/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/playground/e2e/: wave-counter.spec.ts
apps/playground/server/: __init__.py  express.ts  fastapi.py
apps/playground/src/: App.vue  main.ts
apps/website/: README.md
contracts/: conformance.json  dto-schema.json  error-responses.json
crates/wave-counter-core/: Cargo.toml
crates/wave-counter-core/src/: error.rs  lib.rs  model.rs  store.rs  validation.rs
crates/wave-counter-core/tests/: engine.rs
docs/migrations/: adrianlatorre-com.md
docs/superpowers/plans/: 2026-07-10-wave-counter-v1.md  2026-07-13-wave-counter-theme.md  2026-07-14-analytics-windows.md  2026-07-14-lean-python-ci-matrix.md  2026-07-14-wave-counter-react.md  2026-07-15-fresh-analytics-number-flow.md  2026-07-15-stripeish-analytics-chart.md
docs/superpowers/specs/: 2026-07-14-lean-python-ci-matrix-design.md  2026-07-14-wave-counter-react-design.md  2026-07-15-fresh-analytics-number-flow-design.md  2026-07-15-stripeish-analytics-chart-design.md
docs/tickets/: 2026-07-10-wave-counter-v1-design.md
python/wave-counter/: Cargo.toml  README.md  pyproject.toml
python/wave-counter/src/: lib.rs
python/wave-counter/tests/: test_engine.py  test_error_contract.py  test_fastapi.py
python/wave-counter/wave_counter/: __init__.py  _native.pyi  fastapi.py
tooling/: check-conformance.mjs  check-dtos.mjs  check-packages.mjs  check-versions.mjs  checks.test.mjs  set-npm-scope.mjs
