[workspace]
members = ["crates/wave-counter-core", "packages/node", "python/wave-counter"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/willylatorre/wave-counter"

[workspace.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde", "std"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
