[package]
name = "wave-counter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json = "1.0.142"
tempfile.workspace = true

