[package]
name = "wave-counter-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "wave_counter_native"
crate-type = ["cdylib"]

[dependencies]
chrono.workspace = true
pyo3 = { version = "0.27.0", features = ["abi3-py310"] }
serde_json = "1.0.142"
wave-counter-core = { path = "../../crates/wave-counter-core" }
