[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "wave-counter"
version = "0.1.0"
description = "Self-hosted anonymous counters backed by Rust and SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Adrian Latorre" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/willylatorre/wave-counter"
Repository = "https://github.com/willylatorre/wave-counter"
Issues = "https://github.com/willylatorre/wave-counter/issues"

[project.optional-dependencies]
fastapi = ["fastapi>=0.116,<1"]

[dependency-groups]
dev = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "maturin>=1.9,<2",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
  "uvicorn>=0.35,<1",
]

[tool.maturin]
module-name = "wave_counter._native"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["wave_counter"]
